Fixed: Sistemato problema visibilità sulla mappa filtro sottotipo

--- a/client/src/components/burger/burger.scss
+++ b/client/src/components/burger/burger.scss
@@ -28,9 +28,9 @@
     }
 
    &.left.active {
-      left: 35vw;
+      left: 39vw;
       @media screen and (max-width: 1390px) {
-        left: 470px;
+        left: 490px;
       }
     }
 
