--- a/client/src/components/sidebar/sidebar.scss
+++ b/client/src/components/sidebar/sidebar.scss
@@ -15,7 +15,7 @@ nav.sidebar {
     background-color: rgba(37, 37, 37, 0.93);
     z-index: 1;
     &.left {
-        width: 38vw;
+        width: 42vw;
         min-width: 550px;
         // width: 760px;
         left: -800px;
